# webscraper

./: .env.example  .gitignore  README.md  RELEASE_NOTES.md  SETUP.md  TESTING.md  activate_venv.sh  pyproject.toml  requirements.txt  run_tests.sh  search_stats.json  setup.py
docs/: API_REFERENCE.md  ENVIRONMENT_SETUP.md  INSTALLATION_GUIDE.md  USAGE_EXAMPLES.md
src/: __init__.py  __main__.py  agent_cli.py  agent_interface.py  cli.py  container.py  dependencies.py  parser.py  scraper.py  search.py  search_stats.py  semantic.py  storage.py  utils.py
tests/: __init__.py  test_agent_interface.py  test_optimizations.py  test_package.py  test_simple.py
